// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageWithFallback should render 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Array [
        undefined,
        false,
      ],
    ]
  }
>
  <FastImageView
    accessibilityLabel="image-with-fallback-container"
    accessible={true}
    onFastImageError={[Function]}
    onFastImageLoadEnd={[Function]}
    onFastImageLoadStart={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "uri",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="image-with-fallback-container"
  />
</View>
`;

exports[`ImageWithFallback should render with fallback 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Array [
        undefined,
        undefined,
      ],
    ]
  }
>
  <FastImageView
    accessibilityLabel="image-with-fallback-container"
    accessible={true}
    onFastImageError={[Function]}
    onFastImageLoadEnd={[Function]}
    onFastImageLoadStart={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "fallback",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="image-with-fallback-container"
  />
</View>
`;

exports[`ImageWithFallback should render with fallback style 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Array [
        undefined,
        Object {
          "backgroundColor": "red",
        },
      ],
    ]
  }
>
  <FastImageView
    accessibilityLabel="image-with-fallback-container"
    accessible={true}
    onFastImageError={[Function]}
    onFastImageLoadEnd={[Function]}
    onFastImageLoadStart={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "fallback",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="image-with-fallback-container"
  />
</View>
`;
